k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-frontend
  template:
    metadata:
      labels:
        app: feedback-frontend
    spec:
      containers:
        - name: feedback-frontend
          image: 954718262221.dkr.ecr.eu-central-1.amazonaws.com/feedback-analyzer-frontend:ui2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "250m"
