k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-frontend-service
spec:
  selector:
    app: feedback-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
